--- a/app/views/page_objects/edit.html.erb
+++ b/app/views/page_objects/edit.html.erb
@@ -1,5 +1,5 @@
 <% stylesheets 'google-analytics-edit' %>
-<% javascripts 'prototype', 'google-analytics-edit' -%>
+<% javascripts 'google-analytics-edit' -%>
 
 <% fields_for_page_object do |f| %>
 <div class='notice'>- Tracking Page with Google Analytics -</div>
