--- a/public/stylesheets/google-analytics.css
+++ b/public/stylesheets/google-analytics.css
@@ -1,1 +1,1 @@
-body.displaying-page.action-edit .app-google-analytics { height:34px; background:transparent url(/google-analytics/images/google-analytics.png) top center no-repeat; border:1px dotted gray;}
+body.displaying-page.action-edit .app-google-analytics { height:34px; background:transparent url(../images/google-analytics.png) top center no-repeat; border:1px dotted gray; clear:both;}
